test/fail/NoSuchPrimitiveFunction.agda
module NoSuchPrimitiveFunction where

postulate
  X : Set

primitive
  fooBar : X
